# django-template-app

./: .env.example  DevDockerfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.postgres/: postgres-docker-compose.yml  postgres-init.sh
app/: exceptions.py  settings.py  urls.py
app/common/: encoders.py
app/models/: models.py  non_database_models.py
